--- a/modules/common/meshmesh.yaml
+++ b/modules/common/meshmesh.yaml
@@ -1,9 +1,11 @@
 ---
 external_components:
   - source: github://EspMeshMesh/esphome-meshmesh@main
-    components: [meshmesh, meshmesh_direct, network, socket, esphome]
 
 substitutions:
+  baud_rate: 0
+  rx_buffer_size: 0
+  tx_buffer_size: 0
   meshmesh_channel: 6
   
 mdns:
@@ -13,8 +15,8 @@ socket:
   implementation: meshmesh_esp8266
 
 meshmesh:
-  baud_rate: 0
-  rx_buffer_size: 0
-  tx_buffer_size: 0
+  baud_rate: ${baud_rate}
+  rx_buffer_size: ${rx_buffer_size}
+  tx_buffer_size: ${tx_buffer_size}
   password: !secret meshmesh_password
-  channel: $meshmesh_channel
+  channel: ${meshmesh_channel}
