--- a/_coordinator.yaml
+++ b/_coordinator.yaml
@@ -9,6 +9,7 @@ substitutions:
   logger_level: INFO
   logger_baud_rate: 0
   meshmesh_channel: 6
+  meshmesh_version: dev
 
 packages:
   common: !include modules/devices/d1-mini.yaml
