--- a/_coordinator.yaml
+++ b/_coordinator.yaml
@@ -10,6 +10,7 @@ substitutions:
   logger_baud_rate: 0
   meshmesh_channel: 6
   meshmesh_version: dev
+  meshmesh_coordinator: true
 
 packages:
   common: !include modules/devices/d1-mini.yaml
