--- a/modules/common/meshmesh.yaml
+++ b/modules/common/meshmesh.yaml
@@ -1,13 +1,16 @@
 ---
-external_components:
-  - source: github://EspMeshMesh/esphome-meshmesh@main
-
 substitutions:
   baud_rate: 0
   rx_buffer_size: 0
   tx_buffer_size: 0
   meshmesh_channel: 6
-  
+  meshmesh_version: main
+  meshmesh_coordinator: false
+  meshmesh_starpath: false
+
+external_components:
+  - source: github://EspMeshMesh/esphome-meshmesh@${meshmesh_version}
+
 mdns:
   disabled: true
 
@@ -20,3 +23,5 @@ meshmesh:
   tx_buffer_size: ${tx_buffer_size}
   password: !secret meshmesh_password
   channel: ${meshmesh_channel}
+  is_coordinator: ${meshmesh_coordinator}
+  use_starpath: ${meshmesh_starpath}
