fix for not dev config

--- a/_coordinator.yaml
+++ b/_coordinator.yaml
@@ -10,10 +10,12 @@ substitutions:
   logger_baud_rate: 0
   meshmesh_channel: 6
   meshmesh_version: dev
-  meshmesh_coordinator: true
 
 packages:
   common: !include modules/devices/d1-mini.yaml
 
+meshmesh:
+  is_coordinator: true
+  use_starpath: true
 
 ping:
