--- a/_coordinator32.yaml
+++ b/_coordinator32.yaml
@@ -9,6 +9,14 @@ substitutions:
   logger_level: INFO
   logger_baud_rate: 0
   meshmesh_channel: 6
+  meshmesh_version: dev
 
 packages:
   common: !include modules/devices/esp32dev.yaml
+
+meshmesh:
+  is_coordinator: true
+  use_starpath: true
+
+ping:
+  address: server
