--- a/_shelly_1_plus.yaml
+++ b/_shelly_1_plus.yaml
@@ -2,6 +2,13 @@
 substitutions:
   name: shelly-1-plus
   friendly_name: Shelly 1 Plus
-
+  meshmesh_version: dev
 packages:
   common: !include modules/devices/shelly-1-plus.yaml
+
+meshmesh:
+  use_starpath: true
+
+ping:
+  update_interval: 300s
+  address: coordinator
