--- a/modules/devices/esp32dev.yaml
+++ b/modules/devices/esp32dev.yaml
@@ -5,7 +5,7 @@ substitutions:
 
 packages:
   common: !include ../common-esp32.yaml
-  meshmesh: !include ../common/meshmesh.yaml
+  meshmesh: !include ../common/meshmesh-local.yaml
 
 switch:
   - platform: gpio
